# android-extend

./: .gitignore  .travis.yml  README.md  build.gradle  gradle.properties  jcenter.properties  proguard-rules.pro  report_memory_test.xls  settings.gradle
android-extend/: .gitignore  bintray.gradle  build.gradle
android-extend/src/main/: AndroidManifest.xml
android-extend/src/main/jni/: CMakeLists.txt  jni.ver
android-extend/src/main/jni/cache/: Android.mk  CMakeLists.txt  cache.c  cache_adapter.cpp
android-extend/src/main/jni/cache/src/: CMakeLists.txt
android-extend/src/main/jni/cache/src/android/: cache_adapter.cpp
android-extend/src/main/jni/cmake/: Findndk-stl.cmake  findInclude.cmake  findPlatform.cmake
android-extend/src/main/jni/commen/: Android.mk
android-extend/src/main/jni/commen/cache/: cache.c  cache.h  rbtree.c  rbtree.h
android-extend/src/main/jni/commen/device/: Android.mk  device.c
android-extend/src/main/jni/commen/image/: image.h
android-extend/src/main/jni/commen/logger/: Android.mk  logger.cpp  logger.h
android-extend/src/main/jni/commen/render/: comm_render.cpp  comm_render.h  image_render.cpp  image_render.h
android-extend/src/main/jni/device/: Android.mk  device.c
android-extend/src/main/jni/image/: Android.mk  CMakeLists.txt  image.c  image_adapter.cpp
android-extend/src/main/jni/image/src/: CMakeLists.txt
android-extend/src/main/jni/image/src/android/: image_adapter.cpp
android-extend/src/main/jni/loger/: loger.cpp  loger.h
android-extend/src/main/jni/opengl/: Android.mk  Matrix.cpp  comm_render.cpp  image_render.cpp  render.cpp  render.h  render_adapter.cpp  shader.h
android-extend/src/main/jni/render/: Android.mk  CMakeLists.txt
android-extend/src/main/jni/render/src/: CMakeLists.txt
android-extend/src/main/jni/render/src/android/: render_adapter.cpp
android-extend/src/main/jni/serial/: Android.mk  CMakeLists.txt  serial.cpp
android-extend/src/main/jni/serial/src/: CMakeLists.txt
android-extend/src/main/jni/serial/src/android/: serial_adapter.cpp
android-extend/src/main/jni/video/: Android.mk  CMakeLists.txt
android-extend/src/main/jni/video/src/: CMakeLists.txt
android-extend/src/main/jni/video/src/android/: video_adapter.cpp
android-widget-extend/: .cproject  .project  AndroidManifest.xml
android-widget-extend/jni/: Application.mk
android-widget-extend/jni/cache/: Android.mk  cache.c  cache.h  cache_adapter.cpp  cache_data.c  (+7 more)
android-widget-externed/: .project  AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
sample/: AndroidManifest.xml  project.properties
src/main/: .cproject  .project  AndroidManifest.xml
(+262 files in other folders)
