PROJECT(SDK_LIB)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../jniLibs/${ANDROID_ABI})
SET(CMAKE_FIND_ROOT_PATH ${PROJECT_SOURCE_DIR})

ADD_DEFINITIONS(-DBUILD_NUMBER=44)

ADD_SUBDIRECTORY(cache)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(render)
ADD_SUBDIRECTORY(serial)
ADD_SUBDIRECTORY(video)
