PROJECT(SDK_LIB)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../jniLibs/${ANDROID_ABI})
SET(CMAKE_FIND_ROOT_PATH ${PROJECT_SOURCE_DIR})

IF (${CMAKE_BUILD_TYPE} MATCHES "arm64-v8a")
ADD_DEFINITIONS(-DINT64)
ENDIF()

ADD_SUBDIRECTORY(cache)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(render)
ADD_SUBDIRECTORY(serial)
ADD_SUBDIRECTORY(video)
