INCLUDE(${PROJECT_SOURCE_DIR}/../cmake/findInclude.cmake)
INCLUDE_SUB_DIRECTORIES_RECURSIVELY(${PROJECT_SOURCE_DIR})

FIND_PATH(LOGGER_INCLUDE_DIR 
	NAMES "logger.h" 
	PATHS "${PROJECT_SOURCE_DIR}/../commen/logger"
	NO_DEFAULT_PATH)
INCLUDE_SUB_DIRECTORIES_RECURSIVELY(${LOGGER_INCLUDE_DIR})

FIND_PATH(IMAGE_INCLUDE_DIR 
	NAMES "image.h" 
	PATHS "${PROJECT_SOURCE_DIR}/../commen/image"
	NO_DEFAULT_PATH)
INCLUDE_SUB_DIRECTORIES_RECURSIVELY(${IMAGE_INCLUDE_DIR})

FIND_PATH(RENDER_INCLUDE_DIR 
	NAMES "shader.h" 
	PATHS "${PROJECT_SOURCE_DIR}/../commen/render"
	NO_DEFAULT_PATH)
INCLUDE_SUB_DIRECTORIES_RECURSIVELY(${RENDER_INCLUDE_DIR})

FILE(GLOB_RECURSE LIB_SRC "*.cpp" "*.c")

#LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
#SET(CMAKE_FIND_ROOT_PATH ${PROJECT_SOURCE_DIR}/cmake)
SET(allLibs)
#SET(ndk-stl_DIR ${PROJECT_SOURCE_DIR}/cmake/modules)
FIND_PACKAGE(ndk-stl REQUIRED)

FILE(GLOB LOGGER_SRC "${LOGGER_INCLUDE_DIR}/*.cpp" "${LOGGER_INCLUDE_DIR}/*.c" )
FILE(GLOB IMAGE_SRC "${IMAGE_INCLUDE_DIR}/*.cpp" "${IMAGE_INCLUDE_DIR}/*.c" )
FILE(GLOB RENDER_SRC "${RENDER_INCLUDE_DIR}/*.cpp" "${RENDER_INCLUDE_DIR}/*.c" )
SET(LIB_SRC ${LIB_SRC} ${LOGGER_SRC} ${IMAGE_SRC} ${RENDER_SRC})
MESSAGE("module cache:${LIB_SRC}")

IF (${CMAKE_BUILD_TYPE} MATCHES "Release")
MESSAGE("Release SET jni.ver")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,--version-script=${PROJECT_SOURCE_DIR}/jni.ver")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--version-script=${PROJECT_SOURCE_DIR}/jni.ver")
ENDIF()

ADD_LIBRARY(render SHARED ${LIB_SRC})	   
TARGET_LINK_LIBRARIES(render log android jnigraphics GLESv2 GLESv1_CM dl ${allLibs}) 
